# yamaha-dm3-mcp

./: .gitignore  CLAUDE.md  DM3_osc_extracted.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
data/: probe-final-20260419T111508Z.json  probe-scenes-20260419T111318Z.json  probe-scenes2-20260419T111354Z.json
docs/superpowers/plans/: 2026-04-19-dm3-mcp-implementation.md
docs/superpowers/specs/: 2026-04-19-dm3-mcp-design.md  M0-probe-findings.md
scripts/: live_cue_smoke.py  probe.py  probe_dynamics.py  probe_final.py  probe_scenes.py  probe_scenes2.py  smoke_demo.py
src/dm3_mcp/: config.py  server.py
src/dm3_mcp/rcp/: client.py  codec.py  params.py  types.py
src/dm3_mcp/state/: cache.py  initial_sync.py  scenes.py  views.py  wiring.py
src/dm3_mcp/tools/: safety.py
tests/integration/: test_live_client.py
tests/unit/: test_cache.py  test_client.py  test_codec.py  test_cue_monitor.py  test_macros.py  test_params.py  test_read_tools.py  test_safety.py  test_scene_tools.py  test_scenes_store.py  test_smoke.py  test_types.py  test_wiring.py  test_write_primitives.py
